--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
             <artifactId>elasticsearch</artifactId>
             <version>7.17.19</version>
         </dependency>
-
+        <dependency>
+            <groupId>co.elastic.clients</groupId>
+            <artifactId>elasticsearch-java</artifactId>
+            <version>8.8.0</version>
+        </dependency>
         <!-- Apache HttpComponents for Elasticsearch client -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -71,7 +75,11 @@
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.7.25</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
+        </dependency>
     </dependencies>
 
 </project>
